# multiview-davit-mammogram

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/: README.md
checkpoints/yolo/: README.md
codebook/: inbreast_class_distribution.csv  inbreast_codebook.csv
configs/: data.yaml  davit_all.yaml  davit_cc.yaml  davit_mlo.yaml  ensemble.yaml  preprocess.yaml
data/: README.md
docs/: reproducibility.md
notebooks/: 01_explore_cbis.ipynb  02_explore_inbreast.ipynb  03_preprocessing_demo.ipynb  04_clahe_grid.ipynb  05_train_davit_cc.ipynb  06_train_davit_mlo.ipynb  07_train_davit_all.ipynb  08_ensemble_evaluation.ipynb  09_inbreast_zero_shot.ipynb
scripts/: download_yolo_weights.ps1  download_yolo_weights.sh
src/multiview_davit/: __init__.py  config.py
src/multiview_davit/cli/: build_csvs.py  evaluate.py  inference.py  make_splits.py  preprocess.py  train.py
src/multiview_davit/data/: __init__.py  csv_builder.py  datasets.py  inbreast_labels.py  splits.py  transforms.py
src/multiview_davit/evaluation/: __init__.py  confusion.py  ensemble_eval.py  reports.py  stats.py
src/multiview_davit/models/: __init__.py  davit.py  ensemble.py
src/multiview_davit/preprocessing/: __init__.py  naming.py  pipeline.py  postprocess.py  roi.py  yolo_runner.py
src/multiview_davit/training/: __init__.py  early_stopping.py  loop.py  metrics.py  multi_run.py
tests/: test_dataset.py  test_ensemble_shape.py  test_splits.py  test_transforms.py
